fixed navbar font color in collapse

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,3 +22,6 @@
 	box-shadow: none;
 }*/
 
+.navbar-inverse .nav-collapse .nav>li>a, .navbar-inverse .nav-collapse .dropdown-menu a {
+	color: #FFF;
+}
